--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpacktemplate",
+  "name": "webpack-template",
   "version": "1.0.0",
-  "description": "My template",
+  "description": "My template webpack",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
@@ -12,16 +12,26 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2",
-    "mini-css-extract-plugin": "^0.7.0"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "vue": "^2.6.10"
-  }
+  },
+  "browsersList": [
+    ">1%",
+    "last 3 version"
+  ]
 }
